--- a/index.html
+++ b/index.html
@@ -2,21 +2,17 @@
 <html>
 <head>
 	<title>Minha Página</title>
-	
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div class="container">
-		<img class="image" src="img (1).png" alt="Imagem de exemplo">
 		<div class="text">
 			<h1>Gorgeous & Practical</h1>
-			<p>WOriginal & sustainable
-      Each product we offer is as unique as the artist who made it. Our entire collection is crafted using locally sourced, non-toxic materials including repurposed wood and recycled glass. That way we create with the environment in mind.
-</p>
-    <div class="container">
-        <img class="image" src="img (1).png" alt="Imagem de exemplo">
-			<p>Gorgeous & practical
-      We design products for real people living in real homes. We believe that living spaces can be both functional and stunning. That’s why each of our products serves a practical purpose while maintaining an obvious aesthetic appeal. </p>
+			<p>We design products for real people living in real homes. We believe that living spaces can be both functional and stunning. That's why each of our products serves a practical purpose while maintaining an obvious aesthetic appeal.</p>
+      <img class="image" src="img (1).png" alt="Imagem de exemplo">
+			<p>Original & sustainable Each product we offer is as unique as the artist who made it. Our entire collection is crafted using locally sourced, non-toxic materials including repurposed wood and recycled glass. That way we create with the environment in mind.</p>
 		</div>
+		<img class="image" src="img (2).png" alt="Imagem de exemplo">
 	</div>
 </body>
 </html>
